# landmark

./: package-lock.json  package.json
src/: index.html  komi.js  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
